--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>World Clock</title>
 </head>
 <body>
-    
+    <h1>World Clock</h1>
+    <footer>
+        This project wad coded by Liudmyla Kostiuk and is a
+        <a href="
+    </footer>
 </body>
 </html>
