--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <body>
     <h1>World Clock</h1>
     <footer>
-        This project wad coded by Liudmyla Kostiuk and is a
-        <a href="
+        This project wad coded by Liudmyla Kostiuk and is <a href="https://github.com/liudmyla2/world-clock">open-sources on GitHub</a>
     </footer>
 </body>
 </html>
