--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Clock</title>
+    <link rel="stylesheet" href=src/styles.css>">
 </head>
 <body>
     <h1>World Clock</h1>
     <footer>
         This project wad coded by Liudmyla Kostiuk and is <a href="https://github.com/liudmyla2/world-clock">open-sources on GitHub</a>
     </footer>
+
+
+<script src="src/script.js"></script>
+
 </body>
 </html>
