--- a/index.html
+++ b/index.html
@@ -7,7 +7,32 @@
     <link rel="stylesheet" href=src/styles.css>">
 </head>
 <body>
+    <div class="container">
     <h1>World Clock</h1>
+    <select name="" id="">
+        <option value="">Select a city...</option>
+        <option value="london">London</option>
+        <option value="tokyo">Tokyo</option>
+        <option value="sydney">Sydney</option>
+        <option value="prague">Prague</option>
+    </select>
+    </div>
+    <div class="cities">
+        <h2>Los Angeles</h2>
+        <div class="date">August 15th 2022</div>
+        div class="time">10:45:23 PM</div>
+    </div>
+    <div class="cities">
+        <h2>Lion</h2>
+        <div class="date">August 15th 2022</div>
+        div class="time">10:45:23 PM</div>
+    </div>
+    <div class="cities">
+        <h2>Warsaw</h2>
+        <div class="date">August 15th 2022</div>
+        div class="time">10:45:23 PM</div>
+    </div>
+
     <footer>
         This project wad coded by Liudmyla Kostiuk and is <a href="https://github.com/liudmyla2/world-clock">open-sources on GitHub</a>
     </footer>
