--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Clock</title>
-    <link rel="stylesheet" href=src/styles.css>">
+    <link rel="stylesheet" href=src/styles.css>
 </head>
 <body>
     <div class="container">
@@ -16,21 +16,21 @@
         <option value="sydney">Sydney</option>
         <option value="prague">Prague</option>
     </select>
-    </div>
     <div class="cities">
         <h2>Los Angeles</h2>
         <div class="date">August 15th 2022</div>
-        div class="time">10:45:23 PM</div>
+        <div class="time">10:45:23 PM</div>
     </div>
     <div class="cities">
         <h2>Lion</h2>
         <div class="date">August 15th 2022</div>
-        div class="time">10:45:23 PM</div>
+        <div class="time">10:45:23 PM</div>
     </div>
     <div class="cities">
         <h2>Warsaw</h2>
         <div class="date">August 15th 2022</div>
-        div class="time">10:45:23 PM</div>
+        <div class="time">10:45:23 PM</div>
+    </div>
     </div>
 
     <footer>
