--- a/index.html
+++ b/index.html
@@ -16,19 +16,25 @@
         <option value="sydney">Sydney</option>
         <option value="prague">Prague</option>
     </select>
-    <div class="cities">
+    <div class="city">
+    <div>
         <h2>Los Angeles</h2>
         <div class="date">August 15th 2022</div>
+    </div>
         <div class="time">10:45:23 PM</div>
     </div>
-    <div class="cities">
+    <div class="city">
+    <div>
         <h2>Lion</h2>
         <div class="date">August 15th 2022</div>
+    </div>
         <div class="time">10:45:23 PM</div>
     </div>
-    <div class="cities">
+    <div class="city">
+    <div>
         <h2>Warsaw</h2>
         <div class="date">August 15th 2022</div>
+    </div>
         <div class="time">10:45:23 PM</div>
     </div>
     </div>
