--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Clock</title>
     <link rel="stylesheet" href=src/styles.css>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.40/moment-timezone-with-data.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -16,21 +18,21 @@
         <option value="sydney">Sydney</option>
         <option value="prague">Prague</option>
     </select>
-    <div class="city">
+    <div class="city" id="los-angeles">
     <div>
         <h2>Los Angeles</h2>
         <div class="date">August 15th 2022</div>
     </div>
         <div class="time">10:45:23 PM</div>
     </div>
-    <div class="city">
+    <div class="city" id="lion">
     <div>
         <h2>Lion</h2>
         <div class="date">August 15th 2022</div>
     </div>
         <div class="time">10:45:23 PM</div>
     </div>
-    <div class="city">
+    <div class="city" id="warsaw">
     <div>
         <h2>Warsaw</h2>
         <div class="date">August 15th 2022</div>
