--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
     <div class="container">
     <h1>World Clock</h1>
-    <select name="" id="">
+    <select id="city">
         <option value="">Select a city...</option>
-        <option value="london">London</option>
-        <option value="tokyo">Tokyo</option>
-        <option value="sydney">Sydney</option>
-        <option value="prague">Prague</option>
+        <option value="America/Los_Angeles">Los-angeles</option>
+        <option value="Europe/Lion">Lion</option>
+        <option value="Europe/Warsaw">Warsaw</option>
     </select>
+    <siv class="cities">
     <div class="city" id="los-angeles">
     <div>
         <h2>Los Angeles</h2>
@@ -39,6 +39,7 @@
     </div>
         <div class="time">10:45:23 PM</div>
     </div>
+</div>
     </div>
 
     <footer>
