--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     <h1>World Clock</h1>
     <select id="city">
         <option value="">Select a city...</option>
+        <option value="current">My location</option>
         <option value="America/Los_Angeles">Los-angeles</option>
-        <option value="Europe/Lion">Lion</option>
-        <option value="Europe/Warsaw">Warsaw</option>
+        <option value="Europe/Paris">Lyon</option>
+        <option value="Asia/Tokyo">Tokyo</option>
     </select>
-    <siv class="cities">
+    <div id="cities">
     <div class="city" id="los-angeles">
     <div>
         <h2>Los Angeles</h2>
@@ -25,16 +26,16 @@
     </div>
         <div class="time">10:45:23 PM</div>
     </div>
-    <div class="city" id="lion">
+    <div class="city" id="lyon">
     <div>
-        <h2>Lion</h2>
+        <h2>Lyon</h2>
         <div class="date">August 15th 2022</div>
     </div>
         <div class="time">10:45:23 PM</div>
     </div>
-    <div class="city" id="warsaw">
+    <div class="city" id="tokyo">
     <div>
-        <h2>Warsaw</h2>
+        <h2>Tokyo</h2>
         <div class="date">August 15th 2022</div>
     </div>
         <div class="time">10:45:23 PM</div>
