--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
 
     <footer>
-        This project wad coded by Liudmyla Kostiuk and is <a href="https://github.com/liudmyla2/world-clock">open-sources on GitHub</a>
+        This project wad coded by Liudmyla Kostiuk and is <a href="https://github.com/liudmyla2/world-clock">open-sourced on GitHub</a>
     </footer>
 
 
